[package]
name = "tikbot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
passwords = {version = "3.1.16"}
names = {version = "0.14.0", default-features = false}
mockd = {version = "0.4.21", features = ["datetime"]}
[profile.dev]
opt-level = 2
debug = 0
